2011-08-20  Chong Yidong  <cyd@stupidchicken.com>

	* eval.c (Fsignal): Handle `debug' symbol in error handler (Bug#9329).
	(Fcondition_case): Document `debug' symbol in error handler.

2011-08-19  Eli Zaretskii  <eliz@gnu.org>

	* xfaces.c (face_at_buffer_position): Avoid repeated evaluation of
	face ID by FACE_FROM_ID, and avoid a crash when mouse is moved
	from an Org mode buffer to a Speedbar frame.

	* xdisp.c (RECORD_MAX_MIN_POS): If the display element comes from
	a composition, take its buffer position from IT->cmp_it.charpos.
	Fixes cursor positioning at the beginning of a line that begins
	with a composed character.

2011-08-18  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_get_type): If bidi_type_table reports zero as the
	character bidirectional type, use STRONG_L instead.  Fixes crashes
	in a buffer produced by `describe-categories'.

	* dispextern.h (struct bidi_it): Move disp_pos and disp_prop_p
	members before the level stack, so they would be saved and
	restored when copying iterator state.  Fixes incorrect reordering
	around TABs covered by display properties.

2011-08-18  Andreas Schwab  <schwab@linux-m68k.org>

	* process.c (Fnetwork_interface_list): Correctly determine buffer
	size.

2011-08-17  Chong Yidong  <cyd@stupidchicken.com>

	* eval.c (internal_condition_case, internal_condition_case_1)
	(internal_condition_case_2, internal_condition_case_n): Remove
	unnecessary aborts (Bug#9081).

2011-08-17  Eli Zaretskii  <eliz@gnu.org>

	* lread.c (Fload) [DOS_NT]: If `openp' returns -2, but the file
	has no `load' handler, try opening the file locally.  (Bug#9311)

2011-08-16  Ken Brown  <kbrown@cornell.edu>

	* gmalloc.c: Expand comment.

2011-08-16  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (set_cursor_from_row): Don't accept a previous candidate
	if it fails the cursor_row_p test.  Fixes cursor positioning at ZV.

2011-08-16  Ken Brown  <kbrown@cornell.edu>

	Fix memory allocation problems in Cygwin build (Bug#9273).
