@@ -1,3 +1,9 @@
+2011-08-22  Chong Yidong  <cyd@stupidchicken.com>
+
+	* image.c (gif_load): Don't assume that each subimage has the same
+	dimensions as the base image.  Handle disposal method that is
+	"undefined" by the gif spec (Bug#9335).
+
 2011-08-20  Chong Yidong  <cyd@stupidchicken.com>
 
 	* eval.c (Fsignal): Handle `debug' symbol in error handler (Bug#9329).
